imported np,pd,tf and dataset

--- a/Customer_churn_Prediction.ipynb
+++ b/Customer_churn_Prediction.ipynb
@@ -14,7 +14,14 @@
    "id": "13a2c0d4-aa7a-44dc-b1b1-43fd049306ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import tensorflow as tf\n",
+    "url = \"C:\\\\Users\\\\rohini\\\\Documents\\\\ai_learn\\\\python_learn\\\\Assignment\\\\Assignment_1\\\\Churn_Modelling.csv\"\n",
+    "df = pd.read_csv(url)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
