handling duplicate records

--- a/Customer_churn_Prediction.ipynb
+++ b/Customer_churn_Prediction.ipynb
@@ -1229,12 +1229,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1294def0-4977-4ef8-94d1-fc4e740a2ecd",
+   "metadata": {},
+   "source": [
+    "## 2.Apply the necessary data preprocessing like"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "275defb5-3fdf-43dd-954e-55ff3ef716f9",
+   "metadata": {},
+   "source": [
+    "### a. Handling null values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d4adae23-423e-4ffa-8c53-b26cf15e91d1",
+   "execution_count": 33,
+   "id": "fb78ff51-62bc-49fb-ae50-b6a2530d26ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0fb9fb69-045d-4bc8-97c9-f2b53dff1d9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "cdfeea81-967f-4976-bb80-2628a3bf169d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>RowNumber</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerId</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Surname</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CreditScore</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geography</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tenure</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Balance</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Exited</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 0\n",
+       "RowNumber        0\n",
+       "CustomerId       0\n",
+       "Surname          0\n",
+       "CreditScore      0\n",
+       "Geography        0\n",
+       "Gender           0\n",
+       "Age              0\n",
+       "Tenure           0\n",
+       "Balance          0\n",
+       "NumOfProducts    0\n",
+       "HasCrCard        0\n",
+       "IsActiveMember   0\n",
+       "EstimatedSalary  0\n",
+       "Exited           0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.to_frame()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "511b8019-b7fd-4de9-b37d-800e11237235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b9a5090-01ec-4835-b832-1dc2a51ed7c2",
+   "metadata": {},
+   "source": [
+    "#### Replace null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1590639f-5ee2-4a5d-abaf-25992a55e021",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.fillna('NULL VALUE')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "800e01dc-1d6f-4e42-8522-91c67ac7b30d",
+   "metadata": {},
+   "source": [
+    "### b. Handling duplicate records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d7beadcc-8fed-46a9-8b12-4aba910c4c4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates()"
+   ]
   }
  ],
  "metadata": {
