Split data into training and test data

--- a/Customer_churn_Prediction.ipynb
+++ b/Customer_churn_Prediction.ipynb
@@ -981,9 +981,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0cd6ae1-6453-4120-878c-a05a9df3d334",
+   "metadata": {},
+   "source": [
+    "## 4. Split data into training and test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "88c5b66a-723b-4ab6-a21a-b3c5dd8f5bc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size = 0.2,stratify=y,random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "3935108f-6788-4eb7-beaf-f0ddc1fc2240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training Features :\n",
+      "\n",
+      "      RowNumber  CustomerId    Surname  CreditScore  Gender  Age  Tenure  \\\n",
+      "493         494    15725679       Hsia          531       0   47       6   \n",
+      "6839       6840    15768282      Perez          724       1   36       6   \n",
+      "170         171    15587562    Hawkins          484       0   29       4   \n",
+      "4958       4959    15594502      Zotov          655       1   37       6   \n",
+      "4271       4272    15707132      Yudin          465       1   33       5   \n",
+      "...         ...         ...        ...          ...     ...  ...     ...   \n",
+      "6727       6728    15610416   Christie          745       0   36       9   \n",
+      "4674       4675    15689492   Benjamin          850       1   41       1   \n",
+      "6399       6400    15738501      Booth          601       1   48       9   \n",
+      "872         873    15794549    Andrews          722       0   35       2   \n",
+      "8389       8390    15715345  Sergeyeva          743       1   25       6   \n",
+      "\n",
+      "        Balance  NumOfProducts  HasCrCard  IsActiveMember  EstimatedSalary  \\\n",
+      "493        0.00              1          0               0        194998.34   \n",
+      "6839   94615.11              2          1               1         10627.21   \n",
+      "170   130114.39              1          1               0        164017.89   \n",
+      "4958  109093.41              2          1               0          1775.52   \n",
+      "4271       0.00              2          0               1         78698.09   \n",
+      "...         ...            ...        ...             ...              ...   \n",
+      "6727       0.00              1          1               0         19605.18   \n",
+      "4674  176958.46              2          0               1        125806.30   \n",
+      "6399  163630.76              1          0               1         41816.49   \n",
+      "872   163943.89              2          1               1         15068.18   \n",
+      "8389       0.00              2          1               0        129740.11   \n",
+      "\n",
+      "      Geography_France  Geography_Germany  Geography_Spain  \n",
+      "493                  1                  0                0  \n",
+      "6839                 0                  1                0  \n",
+      "170                  1                  0                0  \n",
+      "4958                 1                  0                0  \n",
+      "4271                 1                  0                0  \n",
+      "...                ...                ...              ...  \n",
+      "6727                 1                  0                0  \n",
+      "4674                 0                  1                0  \n",
+      "6399                 0                  1                0  \n",
+      "872                  1                  0                0  \n",
+      "8389                 0                  0                1  \n",
+      "\n",
+      "[8000 rows x 15 columns]\n",
+      "\n",
+      " Testing Features :\n",
+      "\n",
+      "      RowNumber  CustomerId    Surname  CreditScore  Gender  Age  Tenure  \\\n",
+      "1344       1345    15691104    Kennedy          460       0   40       6   \n",
+      "8167       8168    15793135       Wang          713       0   24       7   \n",
+      "4747       4748    15702380    De Luca          663       1   64       6   \n",
+      "5004       5005    15625092    Colombo          502       0   57       3   \n",
+      "3124       3125    15795224         Wu          760       1   39       6   \n",
+      "...         ...         ...        ...          ...     ...  ...     ...   \n",
+      "9107       9108    15617434        Yen          655       1   38       9   \n",
+      "8249       8250    15727421  Anayolisa          586       0   38       6   \n",
+      "8337       8338    15568519       Wood          534       1   41       9   \n",
+      "6279       6280    15608338  Chiemenam          757       0   55       9   \n",
+      "412         413    15686302       Fisk          745       0   31       3   \n",
+      "\n",
+      "        Balance  NumOfProducts  HasCrCard  IsActiveMember  EstimatedSalary  \\\n",
+      "1344  119507.58              2          1               0         91560.63   \n",
+      "8167  147687.24              1          1               1        121592.50   \n",
+      "4747       0.00              2          0               1         15876.52   \n",
+      "5004  101465.31              1          1               0         43568.31   \n",
+      "3124  178585.46              1          1               0         67131.30   \n",
+      "...         ...            ...        ...             ...              ...   \n",
+      "9107       0.00              1          0               1         90490.33   \n",
+      "8249       0.00              2          1               1         37935.83   \n",
+      "8337       0.00              2          1               0         13871.34   \n",
+      "6279  117294.12              4          1               0         94187.47   \n",
+      "412   124328.84              1          1               1        140451.52   \n",
+      "\n",
+      "      Geography_France  Geography_Germany  Geography_Spain  \n",
+      "1344                 0                  1                0  \n",
+      "8167                 0                  1                0  \n",
+      "4747                 0                  0                1  \n",
+      "5004                 0                  1                0  \n",
+      "3124                 1                  0                0  \n",
+      "...                ...                ...              ...  \n",
+      "9107                 0                  0                1  \n",
+      "8249                 1                  0                0  \n",
+      "8337                 1                  0                0  \n",
+      "6279                 0                  0                1  \n",
+      "412                  0                  0                1  \n",
+      "\n",
+      "[2000 rows x 15 columns]\n",
+      "\n",
+      " Training Target :\n",
+      "\n",
+      "493     1\n",
+      "6839    0\n",
+      "170     0\n",
+      "4958    0\n",
+      "4271    0\n",
+      "       ..\n",
+      "6727    1\n",
+      "4674    0\n",
+      "6399    1\n",
+      "872     0\n",
+      "8389    0\n",
+      "Name: Exited, Length: 8000, dtype: int64\n",
+      "\n",
+      "Testing Traget :\n",
+      "\n",
+      "1344    1\n",
+      "8167    0\n",
+      "4747    0\n",
+      "5004    1\n",
+      "3124    1\n",
+      "       ..\n",
+      "9107    0\n",
+      "8249    0\n",
+      "8337    0\n",
+      "6279    1\n",
+      "412     0\n",
+      "Name: Exited, Length: 2000, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\nTraining Features :\\n')\n",
+    "print(x_train)\n",
+    "print('\\n Testing Features :\\n')\n",
+    "print(x_test)\n",
+    "print('\\n Training Target :\\n')\n",
+    "print(y_train)\n",
+    "print('\\nTesting Traget :\\n')\n",
+    "print(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "0ea893eb-8c0e-4ba0-9bd3-ac0478879b93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train=x_train.drop(columns=['Surname'])\n",
+    "x_test=x_test.drop(columns=['Surname'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "7063f4d4-42e5-40d3-8386-e73755cc1b66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "x_train = scaler.fit_transform(x_train)\n",
+    "x_test = scaler.transform(x_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6edadb1-4b13-4cae-957b-9ad7c2d04cee",
+   "id": "27c83283-d348-40b6-b658-3ce709a7270b",
    "metadata": {},
    "outputs": [],
    "source": []
