Predict the exited status for test data

--- a/Customer_churn_Prediction.ipynb
+++ b/Customer_churn_Prediction.ipynb
@@ -1744,9 +1744,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "162c1aa3-b87c-43d3-9850-605c83ad84bb",
+   "metadata": {},
+   "source": [
+    "## 6. Predict the exited status for test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "adafe124-fca9-4bce-8e35-ddf5d2c69b40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.15 1.  ]\n",
+      " [0.11 0.  ]\n",
+      " [0.03 0.  ]\n",
+      " ...\n",
+      " [0.04 0.  ]\n",
+      " [1.   1.  ]\n",
+      " [0.09 0.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.to_numpy().reshape(len(y_test),1)),1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "d37cb096-4d08-4b08-ae68-36a3f3a23e66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Predicted Probability  Actual\n",
+      "0               0.148989       1\n",
+      "1               0.111659       0\n",
+      "2               0.031550       0\n",
+      "3               0.865784       1\n",
+      "4               0.187573       1\n",
+      "5               0.234634       1\n",
+      "6               0.046175       0\n",
+      "7               0.048843       0\n",
+      "8               0.127787       1\n",
+      "9               0.150788       0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "results_df = pd.DataFrame({\n",
+    "    'Predicted Probability': y_pred.flatten(),\n",
+    "    'Actual': y_test.to_numpy()\n",
+    "})\n",
+    "\n",
+    "\n",
+    "print(results_df.head(10))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dca46004-2e29-4bbd-8d33-d8921b14c88b",
+   "id": "cf400d4d-68c5-4811-b8ca-fcdfa0676365",
    "metadata": {},
    "outputs": [],
    "source": []
