--- a/Customer_churn_Prediction.ipynb
+++ b/Customer_churn_Prediction.ipynb
@@ -1813,9 +1813,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "084e9743-bcfc-41ce-a82e-c63d395bd061",
+   "metadata": {},
+   "source": [
+    "## 7. Compute Classification metrics – confusion Matrix, classification Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "37191032-2c6d-4f7f-8136-23770ee05d06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      " [[1540   53]\n",
+      " [ 235  172]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.87      0.97      0.91      1593\n",
+      "           1       0.76      0.42      0.54       407\n",
+      "\n",
+      "    accuracy                           0.86      2000\n",
+      "   macro avg       0.82      0.69      0.73      2000\n",
+      "weighted avg       0.85      0.86      0.84      2000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "y_pred_binary = (y_pred >= 0.5).astype(int)\n",
+    "\n",
+    "\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred_binary)\n",
+    "\n",
+    "class_report = classification_report(y_test, y_pred_binary)\n",
+    "\n",
+    "\n",
+    "print(\"Confusion Matrix:\\n\", conf_matrix)\n",
+    "print(\"\\nClassification Report:\\n\", class_report)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf400d4d-68c5-4811-b8ca-fcdfa0676365",
+   "id": "2e5d5ec5-52f7-4687-bc35-60a1bf94fbf5",
    "metadata": {},
    "outputs": [],
    "source": []
