Report the ANN model accuracy

--- a/Customer_churn_Prediction.ipynb
+++ b/Customer_churn_Prediction.ipynb
@@ -1862,9 +1862,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ac9e315-1287-4553-b916-0e95bed60b66",
+   "metadata": {},
+   "source": [
+    "## 8. Report the ANN model accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "2430438c-baf3-41a3-8d65-84d252f7c09f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANN Model Accuracy: 0.8560\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "\n",
+    "y_pred_binary = (y_pred >= 0.5).astype(int)\n",
+    "\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_pred_binary)\n",
+    "\n",
+    "\n",
+    "print(f\"ANN Model Accuracy: {accuracy:.4f}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e5d5ec5-52f7-4687-bc35-60a1bf94fbf5",
+   "id": "6a525ce1-b43d-4e5d-b63c-dd8b1586a303",
    "metadata": {},
    "outputs": [],
    "source": []
